--- a/app/static/index.html
+++ b/app/static/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8"></meta>
-        <title>Snip Share</title>
+        <title>KeybKontroller</title>
     </head>
     <body>
         <script defer src="render.js"></script>
@@ -56,6 +56,18 @@
             transform: translate(-50%, -50%);">
         </p>
 
+        <p id="currentMedia" style="
+            text-align:left;
+            font-family: 'JetBrains Mono', 'Courier New';
+            color: white;
+            font-size:90%;
+            margin: 0;
+            position: absolute;
+            top: 80%;
+            left: 50%;
+            transform: translate(-50%, -50%);">
+        </p>
+
         <p id="keyboardParamsPara" style="
             text-align:left; 
             font-family: 'JetBrains Mono', 'Courier New'; 
@@ -68,29 +80,6 @@
             transform: translate(-50%, -50%);">
         </p>
 
-        <!-- <form style="
-            text-align:left;
-            font-family: 'JetBrains Mono', 'Courier New';
-            font-size:90%;
-            margin: 0;
-            color: white;
-            position: absolute;
-            top: 90%;
-            left: 50%;
-            transform: translate(-50%, -50%);"
-
-            onsubmit="applyKeyboardRGB();return false"
-        >
-            <label>R</label><input type="number" id="rValue" name="r" min="0" max="255" value="255">
-            <label>G</label><input type="number" id="gValue" name="g" min="0" max="255" value="255">
-            <label>B</label><input type="number" id="bValue" name="b" min="0" max="255" value="255">
-            <div id="rgbBox" style="
-                height: 20px;
-                width: 20px;
-                border: 1px solid black;"></div>
-            <input type="submit" value="Apply">
-
-        </form> -->
 
 
     </body>
